# Zs-Ipc

./: .gitignore  README.md
android_app/: .gitignore  build.gradle
android_app/app/: AndroidManifest.xml  build.gradle
android_app/app/gst-android-build/arm64-v8a/: gstreamer_android.c
android_app/app/jni/: Android.mk  Application.mk  tutorial-3.cpp  yolov8.cpp  yolov8.h  yolov8_cls.cpp  yolov8_det.cpp  yolov8_pose.cpp  yolov8_seg.cpp
android_app/app/res/layout/: main.xml
android_app/app/res/values/: ic_launcher_background.xml  strings.xml
app/: CMakeLists.txt  build.sh
app/include/rknn/: yolov5.h
app/ipc_app/include/: luckfox_mpi.h
app/ipc_app/src/: luckfox_mpi.cc  main.cc
app/lib/glibc/: libdrm.so.2.4.0
os_patches/: BoardConfig-SPI_NAND-Buildroot-RV1106-ZS-IPC.mk  README.md  custom_buildroot_defconfig  custom_kernel_defconfig  rv1106-zs-ipc.dts  start.sh
os_patches/rtl8812au/: 88XXau.ko  88XXau.mod  88XXau.mod.c  README.md  build_driver.sh  modules.order
os_patches/rtl8812au/core/: .rtw_ap.o.cmd  .rtw_beamforming.o.cmd  .rtw_br_ext.o.cmd  .rtw_btcoex.o.cmd  .rtw_btcoex_wifionly.o.cmd  .rtw_cmd.o.cmd  .rtw_debug.o.cmd  .rtw_ieee80211.o.cmd  .rtw_io.o.cmd  .rtw_ioctl_query.o.cmd  .rtw_ioctl_set.o.cmd  .rtw_iol.o.cmd  .rtw_mi.o.cmd  .rtw_mlme.o.cmd  .rtw_mlme_ext.o.cmd  .rtw_mp.o.cmd  .rtw_odm.o.cmd  .rtw_p2p.o.cmd  .rtw_pwrctrl.o.cmd  .rtw_recv.o.cmd  .rtw_rf.o.cmd  .rtw_rson.o.cmd  .rtw_security.o.cmd  .rtw_sreset.o.cmd  .rtw_sta_mgt.o.cmd  .rtw_tdls.o.cmd  .rtw_vht.o.cmd  .rtw_wlan_util.o.cmd  .rtw_xmit.o.cmd  rtw_rf.c  rtw_xmit.c
os_patches/rtl8812au/core/efuse/: .rtw_efuse.o.cmd
os_patches/rtl8812au/hal/: .HalPwrSeqCmd.o.cmd  .hal_btcoex.o.cmd  .hal_btcoex_wifionly.o.cmd  .hal_com.o.cmd  .hal_com_phycfg.o.cmd  .hal_dm.o.cmd  .hal_dm_acs.o.cmd  .hal_intf.o.cmd  .hal_mcc.o.cmd  .hal_mp.o.cmd  .hal_phy.o.cmd
os_patches/rtl8812au/hal/btc/: .halbtc8723bwifionly.o.cmd  .halbtc8821cwifionly.o.cmd  .halbtc8822bwifionly.o.cmd
os_patches/rtl8812au/hal/hal_hci/: .hal_usb.o.cmd
os_patches/rtl8812au/hal/led/: .hal_usb_led.o.cmd
os_patches/rtl8812au/hal/phydm/: .phydm.o.cmd  .phydm_acs.o.cmd  .phydm_adaptivity.o.cmd  .phydm_adc_sampling.o.cmd  .phydm_antdect.o.cmd  .phydm_antdiv.o.cmd  .phydm_api.o.cmd  .phydm_auto_dbg.o.cmd  .phydm_beamforming.o.cmd  .phydm_cck_pd.o.cmd  .phydm_ccx.o.cmd  .phydm_cfotracking.o.cmd  .phydm_debug.o.cmd  .phydm_dfs.o.cmd  .phydm_dig.o.cmd  .phydm_dynamictxpower.o.cmd  .phydm_hwconfig.o.cmd  .phydm_interface.o.cmd  .phydm_math_lib.o.cmd  .phydm_noisemonitor.o.cmd  (+9 more)
os_patches/rtl8812au/include/: osdep_intf.h  rtw_rf.h
os_patches/rtl8812au/os_dep/: .osdep_service.o.cmd
(+54 files in other folders)
